calc/.ops/templates/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: calc-deployment
spec:
  replicas: 1
  template:
    metadata:
      labels:
        app: calc
    spec:
      containers:
      - name: calc
        image: jbienkowski311/calc:0.2.0
        imagePullPolicy: Never
        ports:
        - containerPort: 3000
