calc/.ops/templates/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: calc-service
spec:
  selector:
    app: calc
  ports:
  - protocol: TCP
    port: 80
    targetPort: 3000
